// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DoughnutChart /> > renders Doughnut with expected props 1`] = `
<div>
  <div
    class="tw:flex tw:flex-col tw:md:flex-row tw:md:items-center tw:gap-y-4"
  >
    <div
      class="tw:md:flex-7"
    >
      <div>
        <div
          class="recharts-wrapper"
          style="position: relative; cursor: default; width: 800px; height: 300px;"
        >
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="300"
            style="width: 100%; height: 100%;"
            viewBox="0 0 800 300"
            width="800"
          >
            <title />
            <desc />
            <defs>
              <clippath
                id="recharts3-clip"
              >
                <rect
                  height="290"
                  width="790"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              class="recharts-layer recharts-pie"
              tabindex="0"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
              </g>
            </g>
          </svg>
          <div
            class="recharts-tooltip-wrapper recharts-tooltip-wrapper-right recharts-tooltip-wrapper-bottom"
            style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px; transform: translate(10px, 10px);"
            tabindex="-1"
          >
            <div
              class="recharts-default-tooltip"
              style="margin: 0px; padding: 10px; background: rgba(0, 0, 0, 0.9); border: none; white-space: nowrap; color: white; border-radius: 5px;"
            >
              <p
                class="recharts-tooltip-label"
                style="margin: 0px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="tw:md:flex-5"
    >
      <ul
        class="tw:space-y-1"
      >
        <li
          class="tw:flex tw:items-center"
        >
          <div
            class="tw:inline-block tw:w-[20px] tw:h-[20px] tw:rounded-full tw:align-[-4px] tw:mr-1.5"
            data-testid="color-bullet-0"
            style="background-color: rgb(151, 187, 205);"
          />
          <small
            class="tw:truncate tw:grow"
            data-testid="name-0"
          >
            foo
            <b>
               (
              123
              )
            </b>
          </small>
        </li>
        <li
          class="tw:flex tw:items-center"
        >
          <div
            class="tw:inline-block tw:w-[20px] tw:h-[20px] tw:rounded-full tw:align-[-4px] tw:mr-1.5"
            data-testid="color-bullet-1"
            style="background-color: rgb(247, 70, 74);"
          />
          <small
            class="tw:truncate tw:grow"
            data-testid="name-1"
          >
            bar
            <b>
               (
              456
              )
            </b>
          </small>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<DoughnutChart /> > renders Doughnut with expected props 2`] = `
<div>
  <div
    class="tw:flex tw:flex-col tw:md:flex-row tw:md:items-center tw:gap-y-4"
  >
    <div
      class="tw:md:flex-7"
    >
      <div>
        <div
          class="recharts-wrapper"
          style="position: relative; cursor: default; width: 800px; height: 300px;"
        >
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="300"
            style="width: 100%; height: 100%;"
            viewBox="0 0 800 300"
            width="800"
          >
            <title />
            <desc />
            <defs>
              <clippath
                id="recharts5-clip"
              >
                <rect
                  height="290"
                  width="790"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              class="recharts-layer recharts-pie"
              tabindex="0"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
              </g>
            </g>
            <g
              class="recharts-layer recharts-pie"
              tabindex="0"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
              </g>
            </g>
          </svg>
          <div
            class="recharts-tooltip-wrapper recharts-tooltip-wrapper-right recharts-tooltip-wrapper-bottom"
            style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px; transform: translate(10px, 10px);"
            tabindex="-1"
          >
            <div
              class="recharts-default-tooltip"
              style="margin: 0px; padding: 10px; background: rgba(0, 0, 0, 0.9); border: none; white-space: nowrap; color: white; border-radius: 5px;"
            >
              <p
                class="recharts-tooltip-label"
                style="margin: 0px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="tw:md:flex-5"
    >
      <ul
        class="tw:space-y-1"
      >
        <li
          class="tw:flex tw:items-center"
        >
          <div
            class="tw:inline-block tw:w-[20px] tw:h-[20px] tw:rounded-full tw:align-[-4px] tw:mr-1.5"
            data-testid="color-bullet-0"
            style="background-color: rgb(151, 187, 205);"
          />
          <small
            class="tw:truncate tw:grow"
            data-testid="name-0"
          >
            foo
            <b>
               (
              123
              )
            </b>
          </small>
        </li>
        <li
          class="tw:flex tw:items-center"
        >
          <div
            class="tw:inline-block tw:w-[20px] tw:h-[20px] tw:rounded-full tw:align-[-4px] tw:mr-1.5"
            data-testid="color-bullet-1"
            style="background-color: rgb(247, 70, 74);"
          />
          <small
            class="tw:truncate tw:grow"
            data-testid="name-1"
          >
            bar
            <b>
               (
              456
              )
            </b>
          </small>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<DoughnutChart /> > renders Doughnut with expected props 3`] = `
<div>
  <div
    class="tw:flex tw:flex-col tw:md:flex-row tw:md:items-center tw:gap-y-4"
  >
    <div
      class="tw:md:flex-7"
    >
      <div>
        <div
          class="recharts-wrapper"
          style="position: relative; cursor: default; width: 800px; height: 300px;"
        >
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="300"
            style="width: 100%; height: 100%;"
            viewBox="0 0 800 300"
            width="800"
          >
            <title />
            <desc />
            <defs>
              <clippath
                id="recharts8-clip"
              >
                <rect
                  height="290"
                  width="790"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              class="recharts-layer recharts-pie"
              tabindex="0"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
              </g>
            </g>
            <g
              class="recharts-layer recharts-pie"
              tabindex="0"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
              </g>
            </g>
          </svg>
          <div
            class="recharts-tooltip-wrapper recharts-tooltip-wrapper-right recharts-tooltip-wrapper-bottom"
            style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px; transform: translate(10px, 10px);"
            tabindex="-1"
          >
            <div
              class="recharts-default-tooltip"
              style="margin: 0px; padding: 10px; background: rgba(0, 0, 0, 0.9); border: none; white-space: nowrap; color: white; border-radius: 5px;"
            >
              <p
                class="recharts-tooltip-label"
                style="margin: 0px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="tw:md:flex-5"
    >
      <ul
        class="tw:space-y-1"
      >
        <li
          class="tw:flex tw:items-center"
        >
          <div
            class="tw:inline-block tw:w-[20px] tw:h-[20px] tw:rounded-full tw:align-[-4px] tw:mr-1.5"
            data-testid="color-bullet-0"
            style="background-color: rgb(151, 187, 205);"
          />
          <small
            class="tw:truncate tw:grow"
            data-testid="name-0"
          >
            foo
            <b>
               (
              123
              )
            </b>
          </small>
        </li>
        <li
          class="tw:flex tw:items-center"
        >
          <div
            class="tw:inline-block tw:w-[20px] tw:h-[20px] tw:rounded-full tw:align-[-4px] tw:mr-1.5"
            data-testid="color-bullet-1"
            style="background-color: rgb(247, 70, 74);"
          />
          <small
            class="tw:truncate tw:grow"
            data-testid="name-1"
          >
            bar
            <b>
               (
              456
              )
            </b>
          </small>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
